crates/caelix-macros/tests/ui/controller_rejects_pattern_extractor.stderr
error: expected a simple identifier for extractor argument
 --> tests/ui/controller_rejects_pattern_extractor.rs:8:39
  |
8 |     async fn get_user(&self, #[param] (id): i64) -> caelix_core::Result<String> {
  |                                       ^^^^

warning: unnecessary parentheses around pattern
 --> tests/ui/controller_rejects_pattern_extractor.rs:8:39
  |
8 |     async fn get_user(&self, #[param] (id): i64) -> caelix_core::Result<String> {
  |                                       ^  ^
  |
  = note: `#[warn(unused_parens)]` (part of `#[warn(unused)]`) on by default
help: remove these parentheses
  |
8 -     async fn get_user(&self, #[param] (id): i64) -> caelix_core::Result<String> {
8 +     async fn get_user(&self, #[param] id : i64) -> caelix_core::Result<String> {
  |
